[package]
name = "ansible-rs"
version = "0.1.0"
authors = ["0xd34db33f <0xd34db33f@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false
[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#csv = "1.1.3"
serde-humantime = "0.1.1"
humantime = "1.3"
toml = "0.5"
indicatif = { version = "0.13.0" }
color-backtrace = "0.3.0"
#crossterm = "0.14"
#tui = { version = "0.8", default-features = false, features = ['crossterm'] }
async-ssh2 = {git="https://github.com/0xdeafbeef/async-ssh2.git", rev='2127c94'}
smol = { version = "0.3", features = ["tokio02"] }
blocking = "0.5.0"
num_cpus = "1.0"
futures = "0.3.1"
tokio-trace = "0.1.0"
tokio = { version= "0.2", features=["sync"] }
anyhow = "1.0.32"
async-executor = "0.1.2"
futures-channel = "0.3.5"
confy = "0.4.0"
chrono = "0.4.13"
async-io="0.1.9"
async-channel = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.3" }
