[package]
authors = ["0xd34db33f <0xd34db33f@noreply.github.com>"]
edition = "2018"
name = "ansible-rs"
version = "2.0.1"
[dependencies]
anyhow = "1.0.32"
async-channel = "1.4.0"
async-executor = "0.1.2"
async-io = "0.1.9"
blocking = "0.5.0"
chrono = "0.4.13"
clap = "2.33.0"
color-backtrace = "0.3.0"
confy = "0.4.0"
futures = "0.3.1"
futures-channel = "0.3.5"
futures-rate = "*"
humantime = "1.3"
num_cpus = "1.0"
serde_json = "1.0"
tokio-trace = "0.1.0"
#rustpython = "0.1.2"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
async-ssh2 = {git="https://github.com/0xdeafbeef/async-ssh2.git"}
ssh2 = "0.8"
[dependencies.indicatif]
version = "0.13.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.smol]
features = ["tokio02"]
version = "0.3"

[dependencies.tokio]
features = ["sync"]
version = "0.2"

[dependencies.tracing-futures]
version = "0.2.3"

[profile]
[profile.release]
debug = false
#lto =true
async-channel = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.3" }
