[package]
name = "ansible-rs"
version = "1.3.2"
authors = ["0xd34db33f <0xd34db33f@noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#debug = true
[dependencies]
ssh2="0.7.0"
clap="2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-humantime = "0.1.1"
humantime = "1.3"
toml = "0.5"
indicatif = {version = "0.16.1", features = ["with_rayon"]}
color-backtrace = "0.3.0"
std-semaphore = "0.1"
rayon = "1.1"
csv = "1.1"
chrono = "0.4"
xz2 = "0.1"
anyhow ="1.0.32"
smol ="0.3.3"
futures = "0.3.5"
crossbeam-channel = "0.4.3"
confy = "0.4.0"
[profile.release]
lto = true
